--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.12.0",
+    "better-sqlite3": "^11.1.2",
+    "drizzle-orm": "^0.33.0",
     "hono": "^4.5.6"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.11",
     "@types/node": "^20.11.17",
+    "drizzle-kit": "^0.24.0",
     "tsx": "^4.7.1"
   }
 }
